--- a/Banquet/package.json
+++ b/Banquet/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.16.1",
+    "axios": "^1.12.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "recharts": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
